<resources>
    <string name="app_name">My_CV_App</string>
    <string name="cv">CV</string>
    <string name="adrijana_savic">Adrijana Savic</string>

    <string name="splashtime_key">splashtime_settings</string>
    <string name="splash_key">splash_settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_about">About</string>
    <string name="title_experience">Experience</string>
    <string name="title_projects">Projects</string>
    <string name="press_back_again">\"Press back once again to exit!\"</string>

    <string name="accept_permissions">Please agree all request permission</string>
    <string name="send_mail">Send email…</string>

    <string name="action_call_me">Call me</string>
    <string name="action_message">Message</string>
    <string name="action_explore">CV</string>

    <string name="skills">Skills</string>
    <string name="interests">Interests</string>
    <string name="full_name">Adrijana Savić</string>
    <string name="occupation">Android Developer</string>

    <string name="skills_details">I\'m an ambitious and motivated Java Developer focused on Android platform and User Experience.
        I develop using Android Studio and Git control version.
        Also I have a little bit experience in technologies and tools such as:
        Python, HTML, CSS,  Photoshop.
    </string>

    <string name="interests_details">I discover the world by traveling, getting know the people,
        eating new things and learning foreign languages.
        Taking photo is the way to keep all memories in my mind.
        Also I try to life healthy by cooking.
        I listen to music every day and in free time watch movies.
    </string>
</resources>
