<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.florent37.diagonallayout.DiagonalLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_background_image_height"
                app:diagonal_angle="15"
                diagonal:diagonal_direction="left"
                diagonal:diagonal_position="bottom">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/backgraund_cv" />

                <TextView
                    style="@style/about_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginLeft="@dimen/about_padding_left"
                    android:layout_marginTop="@dimen/about_name_padding_top"
                    android:text="@string/full_name" />

                <TextView
                    style="@style/about_occupation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginLeft="@dimen/about_padding_left"
                    android:layout_marginTop="@dimen/about_occupation_padding_top"
                    android:text="@string/occupation" />

            </com.github.florent37.diagonallayout.DiagonalLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/about_head_image_size"
                android:layout_height="@dimen/about_head_image_size"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="@dimen/about_padding_left"
                android:src="@drawable/adrijana_savic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right">

                <Button
                    android:id="@+id/call_me"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:paddingRight="@dimen/text_margin"
                    android:text="@string/action_call_me"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/message_me"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:paddingRight="@dimen/text_margin"
                    android:text="@string/action_message" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                style="@style/about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_section_title_padding_bottom"
                android:text="@string/skills" />

            <TextView
                style="@style/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_section_details_padding_bottom"
                android:text="@string/skills_details" />

            <TextView
                style="@style/about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_section_title_padding_bottom"
                android:text="@string/interests" />

            <TextView
                style="@style/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_section_details_padding_bottom"
                android:text="@string/interests_details" />

            <!--            <Button-->
            <!--                android:id="@+id/cv"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:textColor="@android:color/white"-->
            <!--                android:background="@color/colorPrimary"-->
            <!--                android:paddingLeft="@dimen/about_button_padding"-->
            <!--                android:paddingRight="@dimen/about_button_padding"-->
            <!--                android:layout_marginTop="@dimen/about_button_margin_top"-->
            <!--                style="@style/Widget.AppCompat.Button"-->
            <!--                android:text="@string/action_explore"/>-->

            <LinearLayout
                android:id="@+id/fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/linkedIN"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:src="@drawable/linkedin" />

                <ImageView
                    android:id="@+id/GitHub"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="80dp"
                    android:clickable="true"
                    android:src="@drawable/github" />

                <ImageView
                    android:id="@+id/cv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="80dp"
                    android:clickable="true"
                    android:src="@drawable/cv" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>